--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,10 @@
     margin: 0;
     font-family: sans-serif;
     box-sizing: border-box;
-    
 }
 
 .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(//image/background.jpg);
+    background-image: url(../image/background.jpg);
 }
