--- a/css/style.css
+++ b/css/style.css
@@ -349,5 +349,5 @@ footer p:nth-child(2){
     position: absolute;
     color: #f9004d;
     bottom: 35px;
-    font-size: 14px;
+    font-size: 14px`;
 }
